z-indexy - fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,7 +146,7 @@ select, select:focus, input, input:focus {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 2;
 }
 
 .scroll-enable-sm, .scroll-enable-lg{
@@ -155,7 +155,7 @@ select, select:focus, input, input:focus {
 
 .left-menu-close {
     position: absolute;
-    z-index: 3;
+    z-index: 4;
     top: 30px;
     left: 250px;
 }
@@ -264,7 +264,7 @@ select, select:focus, input, input:focus {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 3;
     min-width: 310px;
     height: 100%;
     padding-top: 100px;
@@ -304,7 +304,7 @@ select, select:focus, input, input:focus {
 .left-menu {
     display: none;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     min-width: 310px;
@@ -401,7 +401,7 @@ select, select:focus, input, input:focus {
         position: absolute;
         top: 55px;
         left: -55px;
-        z-index: 1;
+        z-index: 2;
         min-width: 160px;
         min-height: 120px;
         padding-top: 25px;
@@ -485,7 +485,7 @@ select, select:focus, input, input:focus {
 
     .dropdown-content {
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         min-width: 250px;
         height: 350px;
         padding-top: 30px;
